--- a/realData.qmd
+++ b/realData.qmd
@@ -194,7 +194,7 @@ write.csv(d2, "./data/out/forObservable/d2.csv")
 ```
 
 
-### Plot absolute flow ECDF  
+### Plot absolute flow ECDFs  
 ```{r}
 #| label: plotECDFsd2
 
@@ -206,7 +206,7 @@ ggplot(d2, aes(flow_cfs_log10_scaled, flow_cfs_log10_scaled_ecdf)) +
 
 ```
 
-## WB0
+## Site WB0
 Explore variables for the WB0 site
 ```{r}
 #| label: plotWB0
@@ -318,7 +318,7 @@ get_smoothed_data_figs <- function(dIn, dInSample, dInSample_interp, dInSample_g
       aes(x = -1.5, y = 0.9), 
       label = paste0(
         "Difference in area = ", 
-        round(getECDF_diff(dIn$score_scaled_ecdf, dInSample_interp$y), 5)
+        round(getECDF_diff(dIn$score_scaled_ecdf, dInSample_interp$y), 4)
       ), 
       size = 6, 
       color = "orange"
@@ -337,7 +337,7 @@ get_smoothed_data_figs <- function(dIn, dInSample, dInSample_interp, dInSample_g
       aes(x = -1.5, y = 0.9), 
       label = paste0(
         "Difference in area = ", 
-        round(getECDF_diff(dIn$score_scaled_ecdf, dInSample_gam$y), 5)
+        round(getECDF_diff(dIn$score_scaled_ecdf, dInSample_gam$y), 4)
       ),
       size = 6, 
       color = "orange"
@@ -718,6 +718,117 @@ plotSubSample(dABs, 3)
 :::
 
 
+## Simulate area differences
+```{r}
+#| label: simDiffs
+
+# repeating here for Quarto
+ get_preds_gam_sim <- function(dIn, num_pred_points = 100) {
+  mod <- loess(flow_cfs_log10_scaled_ecdf ~ flow_cfs_log10_scaled, data = dIn)
+  
+  x <- seq(min(dIn$flow_cfs_log10_scaled), max(dIn$flow_cfs_log10_scaled), length.out = num_pred_points)
+  df <- data.frame(
+    x = x,
+    y = predict(mod, x)
+  )
+  return(df)
+}
+
+get_preds_interp_sim <- function(dIn, num_pred_points = 100) {
+  df <- data.frame(
+    approx(
+      dIn$flow_cfs_log10_scaled, 
+      dIn$flow_cfs_log10_scaled_ecdf, 
+      xout = seq(min(dIn$flow_cfs_log10_scaled), max(dIn$flow_cfs_log10_scaled), length.out = num_pred_points)
+    )
+  )
+  return(df)
+}
+
+get_quantile_value_sim <- function(d, quant) {
+   q <- quantile(d, quant) 
+   row_n <-  min(which(abs(d - q) == min(abs(d - q)))) # min to get 'unique' row number
+   return(d[row_n])
+}
+
+
+
+n_rep <- 25
+#sim_diffs_out <- data.frame(station_name=NA, anchor_tf=NA, n = NA, rep = NA, area_diff = NA)
+sim_diffs_out <- data.frame()
+
+
+for(s in unique(d2$station_name)) {
+  for(anchor_tf in c(TRUE, FALSE)) {
+    for(n in c(100,50,10,8,6,4)) {
+      for(rep in seq(1, n_rep)) {
+       
+        dIn <- d2 |> filter(station_name == s)
+        dInSample0 <- sample_n(dIn, n) 
+        
+        if(anchor_tf) {
+            dInSample <- rbind(
+              dInSample0, 
+              dIn |> 
+                filter(flow_cfs_log10_scaled == get_quantile_value_sim(flow_cfs_log10_scaled, 0.01)) |> 
+                filter(score_scaled == get_quantile_value_sim(score_scaled, 0.01)),
+              dIn |> 
+                filter(flow_cfs_log10_scaled == get_quantile_value_sim(flow_cfs_log10_scaled, 0.99)) |> 
+                filter(score_scaled == get_quantile_value_sim(score_scaled, 0.99))
+            )
+        } 
+        else {
+          dInSample <- dInSample0
+        }
+        
+        dInSample_interp <- get_preds_interp_sim(dInSample, n)
+        area_diff_interp <- getECDF_diff(dIn$score_scaled_ecdf, dInSample_interp$y)
+        
+        dInSample_gam <- get_preds_gam_sim(dInSample, n)
+        area_diff_gam <- getECDF_diff(dIn$score_scaled_ecdf, dInSample_gam$y)
+        
+        sim_diffs_out <- bind_rows(
+          sim_diffs_out,
+          data.frame(station_name=s, anchor_tf=anchor_tf, n = n, rep = rep, area_diff_interp = area_diff_interp, area_diff_gam = area_diff_gam)
+        )
+        
+        print(c(s,anchor_tf,n,rep))
+      }
+    }
+  }
+}
+
+
+```
+
+### Graph area differences
+#### Linear interpolation between flow points
+```{r}
+#| label: graphAreaDiff_interp
+
+ggplot(sim_diffs_out, aes(n, area_diff_interp, color = anchor_tf)) +
+  geom_point() +
+  #geom_line() +
+  geom_smooth(method = "gam", 
+              formula = y ~ s(x, bs = "cs", fx = TRUE, k = 3), se = FALSE) +
+  facet_wrap(~station_name, scales = "free") +
+  theme_publication()
+
+```
+
+#### GAM fit across flow points
+```{r}
+#| label: graphAreaDiff_gam
+
+ggplot(sim_diffs_out, aes(n, area_diff_gam, color = anchor_tf)) +
+  geom_point() +
+  #geom_line() +
+  geom_smooth(method = "gam", 
+              formula = y ~ s(x, bs = "cs", fx = TRUE, k = 3), se = FALSE) +
+  facet_wrap(~station_name, scales = "free") +
+  theme_publication()
+
+```
 
 
 ```{r}
